Reference menu CSS/JS. Fix styling due to bad div nesting of page content. Fix mobile view cutting off content (although the login/account links are still problematic).

--- a/src/Tracker/wwwroot/css/site.css
+++ b/src/Tracker/wwwroot/css/site.css
@@ -1,5 +1,4 @@
-﻿body {
-    padding-top: 50px;
+﻿#page-wrapper {
     padding-bottom: 20px;
 }
 
